Fix staff pictures with wrong size

--- a/branch/branch.css
+++ b/branch/branch.css
@@ -40,5 +40,6 @@
     .image-container {
         width: 90%;
         height: auto;
+        margin: auto;
     }
 }
