--- a/profile/profile.css
+++ b/profile/profile.css
@@ -49,8 +49,10 @@
     overflow: hidden;
 }
 #profile-image-pic {
-    width: 400px;
-    height: 270px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
 }
 .profile-pic {
     position: absolute;
